trunk/Archive2/09/bcbd274c6b15c8/output
main.cpp:17:12: error: cannot cast 'B' to its private base class 'A'
    A *a = b;
           ^
main.cpp:12:11: note: declared private here
class B : private A { };
          ^~~~~~~~~
1 error generated.
